set(MODULE_NAME dub)
# --------------------------------------------------------------

# --------------------------------------------------------------
#  module
# --------------------------------------------------------------
add_custom_target(${MODULE_NAME} true)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lubyk
  DESTINATION lib
)                                  

# --------------------------------------------------------------
#  test
# --------------------------------------------------------------
# add_test(
#   NAME dub
#   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
#   COMMAND luajit test/all.lua
# )
